--- a/.github/workflows/Build-IPA.yml
+++ b/.github/workflows/Build-IPA.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: macos-latest
 
     steps:
+
+    
       - name: Checkout Repository
         uses: actions/checkout@v4
 
@@ -25,6 +27,12 @@ jobs:
             brew install cocoapods
             pod install
           fi
+
+      - name: Update Deployment Target in project.pbxproj
+         run: |
+           cd ios
+           find . -name 'project.pbxproj' -exec sed -i '' 's/IPHONEOS_DEPLOYMENT_TARGET = 8.0;/IPHONEOS_DEPLOYMENT_TARGET = 12.0;/g' {} +
+           cat Runner.xcodeproj/project.pbxproj | grep IPHONEOS_DEPLOYMENT_TARGET
 
       - name: Build and Archive Project
         run: |
