--- a/.github/workflows/Build-IPA.yml
+++ b/.github/workflows/Build-IPA.yml
@@ -65,7 +65,8 @@ jobs:
             CODE_SIGNING_ALLOWED=NO
 
       - name: Upload Unsigned IPA
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: unsigned-ipa
           path: output
+          retention-days: 7
