--- a/.github/workflows/Build-IPA.yml
+++ b/.github/workflows/Build-IPA.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: stable
+          flutter-version: 3.16.5
 
       - name: Enable Flutter iOS
         run: flutter config --enable-ios
