--- a/.github/workflows/Build-IPA.yml
+++ b/.github/workflows/Build-IPA.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build-ios:
-    runs-on: macos-latest
+    runs-on: macos-13 # Use x86_64 instead of ARM64 macOS
 
     steps:
       - name: Checkout Repository
