--- a/.github/workflows/Build-IPA.yml
+++ b/.github/workflows/Build-IPA.yml
@@ -36,6 +36,13 @@ jobs:
           sudo gem install cocoapods
           cd ios && pod install && cd ..
 
+      - name: Regenerate Podfile
+        run: |
+          rm -f ios/Podfile ios/Podfile.lock
+          flutter clean
+          flutter pub get
+          cd ios && pod install --verbose && cd ..
+
       - name: Set Up Xcode
         run: |
           sudo xcode-select -s /Applications/Xcode.app/Contents/Developer
